--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           max-width: fit-content;
           margin: auto;
       }
-      button {
+      .option button {
           font-size: 26pt;
           font-weight: bold;
           display: block;
@@ -35,11 +35,15 @@
           text-align: center;
           visibility: hidden;
       }
+      #absoluteBlock {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+      }
       #infoBlock {
+          float: right;
           font-size: 18pt;
           margin-left: auto;
-          margin-top: 20px;
-          margin-right: 20px;
           width: 150px;
       }
       .check { color: green; }
@@ -48,16 +52,42 @@
           height: 20px;
           width: 20px;
       }
+      #helpButton {
+          font-size: inherit;
+          width: inherit;
+      }
+      #helpText {
+          background: #e9e9ed;
+          margin-right: 20px;
+          padding: 20px;
+          width: 60%;
+          float: right;
+          font-size: 16pt;
+          display: inline-block;
+          border: 1px solid black;
+          visibility: hidden;
+      }
     </style>
   </head>
   <body>
-    <div id="infoBlock">
-      <span class="check">✓</span><span id="correctCount">0</span>&nbsp;
-      <span class="x">✗</span><span id="incorrectCount">0</span>
-      <div>Avg: <span id="averageTime">0.00</span>s</div>
-      <div><input id="feedback" type="checkbox">Feedback</input></div>
+    <div id="absoluteBlock">
+      <div id="infoBlock">
+        <span class="check">✓</span><span id="correctCount">0</span>&nbsp;
+        <span class="x">✗</span><span id="incorrectCount">0</span>
+        <div>Avg: <span id="averageTime">0.00</span>s</div>
+        <div><input id="feedback" type="checkbox">Feedback</input></div>
+        <button id="helpButton">Help</button>
+      </div>
+      <div id="helpText">
+        This is a practice version of the Number Speed & Accuracy portion of the Thomas General Intelligence Assessment.
+        <br><br>
+        You'll be shown three numbers. Your job is to click the one that is farthest from the middle number. Shown 5, 14, and 8, for example: 8 is the middle number. 14 is farther from 8 than 5 is, so the correct answer is 14.
+        <br><br>
+        The top-right displays your total number of correct and incorrect answers, as well as the average time it's taken you to choose correctly so far. Checking the "Feedback" box will cause a brief pause after each answer to indicate which choice was correct.
+        <br><br>
+        This is a standalone page that you can run offline. Just save the HTML file with Ctrl+S and open it in your browser.
+      </div>
     </div>
-
     <div id="buttons">
       <div class="option">
         <div class="pad">&nbsp;</div>
@@ -120,6 +150,20 @@
               button.style.background = "linear-gradient(to bottom, #446699, #10316f)";
           }
       }
+
+      (() => {
+          const helpButton = document.getElementById("helpButton");
+          helpButton.addEventListener("click", () => {
+              const helpText = document.getElementById("helpText");
+              if (getComputedStyle(helpText).visibility === "hidden") {
+                  helpText.style.visibility = "visible";
+                  helpButton.textContent = "Close help";
+              } else {
+                  helpText.style.visibility = "hidden";
+                  helpButton.textContent = "Help";
+              }
+          });
+      })();
 
       const stats = {
           correctTimes: [],
